Bug 153933 - bg color for area fill of cell and dialog fields for negative find results against calc cells -- #ff6563 is a bit harsh
Summary: bg color for area fill of cell and dialog fields for negative find results ag...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0
Keywords: needsUXEval
Depends on:
Blocks:
 
Reported: 2023-03-02 22:53 UTC by jim_away
Modified: 2023-07-11 08:03 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Find bar and Find & Replace screen capture recent trunk on Win10 - dark and light (2.62 MB, image/gif)
2023-03-03 16:24 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jim_away 2023-03-02 22:53:38 UTC
Description:
In 7.5.x version the background of the textField is populated with a VERY annoying "pink" background that canNOT be dimmed nor can it be eliminated/changed.  The prior versions highlighted the words "Search key not found" red to notify that the key did not match. That was adequate.  The alteration of this notification is way overboard and EXTREMELY distracting!  Please make it go away! OR; allow me to choose a nonDISTRACTING color; or allow me to dim the "pink" since I am not sight impaired! I can click the red-circle-white-X to make the pink go away; however, I feel that I should not have to take this seemingly unnecessary action each and every unFound key!  Give me an option to: 1) (preferred) change it back to the red words "Search key not found"; 2) pick a nonDistracting color; 3) allow the background to be dimmed!  2) & 3) if implemented should be a, "one, the other, or both choice!

Steps to Reproduce:
1.pick something that is a Search Key that cannot be found
2.Press enter
3.the "PINK" background appears some times after a "flash" a pink-draw across the textField; sometimes an annoying blinky-draw of pink ... . This is reproducible on six (6) other win10 platforms accessible by me with this LibreOffice update version! 

Actual Results:
The background goes pink and stays that way until a search key is entered that is found or one takes the time to click the red-circle with the white-X

Expected Results:
the undesirable PINK in the background of the search texField


Reproducible: Always


User Profile Reset: Yes

Additional Info:
[Information automatically included from LibreOffice]
Locale: en-US
Module: SpreadsheetDocument
[Information guessed from browser]
OS: Windows (All)
OS is 64bit: no

leave the search textField background default and change ONLY the search key in the textField so it is noticeable but NOT distracting.  Allow me to select the color of the lettering, optionally the background if changed, and the brightness.

No place to enter the Help-About LibreOffice so I shall insert it here:

Version: 7.5.0.3 (X86_64) / LibreOffice Community
Build ID: c21113d003cd3efa8c53188764377a8272d9d6de
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 1 V Stuart Foote 2023-03-02 23:56:18 UTC
Hmm that is kind of a harsh, used for for bg for the search field when no results are found. But field also receives white fg text on the red.

The color looks to be the "Light Red 2" or #ff6d6d found on standard.soc palette, I think. But I couldn't find it assigned via variable string.  

Affects both the Quickfind or the Find & Replace dialog  not sure where it is assigned. System | Light | Dark has not effect and can't locate as an established Application Colors AC.

@Heiko, can you find the assigned fg/bg colors for the Find bar and Find & Replace  dialog handling used for Calc cells? Might need to take the bg a lighter red and the fg to a blue or a green for contrast both Light and Dark color themes.

=-testing-=

Version: 7.5.1.2 (X86_64) / LibreOffice Community
Build ID: fcbaee479e84c6cd81291587d2ee68cba099e129
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 2 Heiko Tietze 2023-03-03 07:29:56 UTC
Please share a screenshot, Jim.
Comment 3 V Stuart Foote 2023-03-03 16:24:44 UTC
Created attachment 185732 [details]
Find bar and Find & Replace screen capture recent trunk on Win10 - dark and light

Looks to be #ff6d6d in the field holding the search string when no results are found.
Comment 5 Heiko Tietze 2023-03-06 12:20:06 UTC
In case of weld::EntryMessageType::Error the background becomes #ff6563, see vcl/source/app/salvtables.cxx set_message_type().

This red has not changed (neither it follows dark/light color schemes) and I don't get the "pink". Since we do not have a warning/error color from the OS this looks like a proper solution.

Although some adjustments make sense, ie. the yellow color is over-saturated and should become #ffff63.
Comment 6 V Stuart Foote 2023-03-06 13:09:30 UTC
(In reply to Heiko Tietze from comment #5)
> In case of weld::EntryMessageType::Error the background becomes #ff6563, see
> vcl/source/app/salvtables.cxx set_message_type().
> 
> This red has not changed (neither it follows dark/light color schemes) and I
> don't get the "pink". Since we do not have a warning/error color from the OS
> this looks like a proper solution.
> 

Thanks Heiko for finding that one off color ref (OOo from i75179) for the ERROR--could we adjust it from 0xff6563 to 0xff6d6d so picker can match a color on the Standard palette "Light Red 2"--but have to say it does trend "pink" .

> Although some adjustments make sense, ie. the yellow color is over-saturated
> and should become #ffff63.

I guess, for Warning the COL_YELLOW is a bit saturated.

So, how about tweaking to 

ERROR -- 0xff3838 
WARNING -- 0xffff38 

which would correspond to the  "Light Red 1" and "Light Yellow 1" of the standard palette?

As long as there is no unit test conflict, that change would improve UI for both.
Comment 7 Heiko Tietze 2023-03-06 13:41:38 UTC
Let's give it a try https://gerrit.libreoffice.org/c/core/+/148348

(not solving the OP's reported "pink" though)
Comment 8 Commit Notification 2023-03-07 08:28:44 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d9ba2fbdc81705d387f932700289b2dda8ea81dc

Resolves tdf#153933 - Minor adjustments to EntryMessageType

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 V Stuart Foote 2023-07-10 23:42:07 UTC
*** Bug 156227 has been marked as a duplicate of this bug. ***