Resolves tdf#153933 - Minor adjustments to EntryMessageType

Red adjusted to follow the standard palette and yellow to
have the same saturation

Change-Id: Ic40a37c77862471066a8575d4b22cc18dc6edac4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148348
Reviewed-by: Vernon, Stuart Foote <vsfoote@libreoffice.org>
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>